@@ -3,7 +3,7 @@ package Net::Curl::Promiser;
 use strict;
 use warnings;
 
-our $VERSION = '0.07_07';
+our $VERSION = '0.07_08';
 
 =encoding utf-8
 
